add child ad&list page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
+        "dev": "vite --host 192.168.1.13 --cors",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix"
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@internationalized/date": "^3.8.2",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
