--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
         "@internationalized/date": "^3.8.2",
+        "@primeuix/themes": "^1.2.3",
         "@vueuse/core": "^12.8.2",
         "axios": "^1.11.0",
+        "chart.js": "^4.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
+        "primevue": "^4.3.9",
         "reka-ui": "^2.2.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
+        "tailwindcss-primeui": "^0.6.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
         "ziggy-js": "^2.4.2"
